@@ -87,11 +87,7 @@ c d e f g a b
 @noindent
 then the result looks like this:
 
-@c ?
-@c \transpose c c' { c d e f g a b }
-@c @lily pond[notime]
-@c \property Score.timing = ##f
-@lilypond[notime,relative=2]
+@lilypond[notime,relative]
 c d e f g a b
 @end lilypond
 
